# polyhegel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  DOMAIN_ARCHITECTURE.md  DOMAIN_LOADING.md  DX_CHEATSHEET.md  GETTING_STARTED.md  Makefile  README.md  RELEASE.md  generate_fixtures.py  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: README.md  dev.yml  docs.yml  main.yml  pr.yml  release.yml
docs/: a2a-agents.md  architecture.md  docstring_prioritization.md  documentation_strategy.md  gen_ref_pages.py  getting-started.md  index.md  requirements.txt  security.md  strategic_techniques.md
docs/architecture/: agent-system.md  core-vs-examples.md  overview.md  security.md  strategic-techniques.md  technical-architecture-domain.md
docs/contributing/: development.md  releases.md  testing.md
docs/development/: extending-polyhegel.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  troubleshooting.md
docs/guide/: a2a-agents.md  simulation.md  strategic-techniques.md  tournament.md
examples/: quickstart_python_api.py
examples/polyhegel/: __init__.py
examples/polyhegel/agents/: __init__.py
examples/polyhegel/evaluation/: __init__.py
examples/polyhegel/servers/: __init__.py
examples/polyhegel/techniques/: __init__.py
polyhegel/: __init__.py  __main__.py  cli.py  clusterer.py  config.py  domain_manager.py  embedder.py  evaluator.py  generator.py  git_tools.py  graph_builder.py  model_manager.py  models.py  simulator.py  strategic_techniques.py  strategy_evaluator.py  strategy_generator.py  summarizer.py  tournament.py  web_tools.py
polyhegel/agents/: __init__.py  a2a_cards.py  a2a_coordinator.py  a2a_executors.py  a2a_simulation.py  base.py  follower.py  leader.py
polyhegel/agents/common/: __init__.py  agents.py  cards.py
polyhegel/clients/: __init__.py  a2a_client.py
polyhegel/evaluation/: __init__.py  base.py  comparative_test.py  metrics.py
polyhegel/prompts/: __init__.py  config.yaml  loader.py  strategic_compare.txt  strategic_techniques.txt  theme_generation.txt
polyhegel/prompts/general/: default_system.md  default_user.md
polyhegel/prompts/strategic/: evaluate.md  evaluate_single.md  refine.md
polyhegel/refinement/: __init__.py  feedback.py  metrics.py  recursive.py
polyhegel/security/: __init__.py  a2a_auth.py  tls_config.py
polyhegel/servers/: __init__.py  follower_server.py  leader_server.py
polyhegel/servers/common/: __init__.py  common_analysis_leader_server.py  common_follower_server.py
polyhegel/techniques/: __init__.py
polyhegel/techniques/common/: __init__.py  techniques.py
polyhegel/telemetry/: __init__.py  a2a_telemetry.py
scripts/: docs-dev.py  polyhegel-create-domain.py  polyhegel-doctor.py  polyhegel-setup.py  release.py  run-all-agents.sh  run-all-common-agents.sh  run-common-follower-consensus.sh  run-common-follower-risk.sh  run-common-follower-scenario.sh  run-common-follower-stakeholder.sh  run-common-follower-tradeoff.sh  run-common-leader.sh  run-follower-general.sh  run-follower-resource.sh  run-follower-security.sh  run-follower-value.sh  run-leader-agent.sh  run-techarch-follower-backend.sh  run-techarch-follower-frontend.sh  run-techarch-follower-infrastructure.sh  run-techarch-follower-security.sh  run-techarch-leader.sh  run_tests.sh
tests/: conftest.py  test_a2a_integration.py  test_a2a_servers.py  test_base_agent.py  test_common_agents.py  test_comparative_evaluation.py  test_follower_agent.py  test_full_integration.py  test_git_tools.py  test_hierarchical_integration.py  test_integration.py  test_integration_git_tools.py  test_integration_strategy_with_tools.py  test_integration_web_tools.py  test_leader_agent.py  test_models.py  test_prompt_loader.py  test_prompts.py  test_recursive_refinement.py  test_simulator.py  test_strategic_comparison.py  test_strategic_technique_prompts.py  test_strategic_techniques.py  test_strategy_evaluator.py  test_structured_output.py  test_technique_guidance.py  test_telemetry.py  test_tournament.py  test_web_tools.py
tests/fixtures/: README.md  hotdog_reconciliation_report.md  hotdog_reconciliation_simulation.json  minimal_hotdog_test.json
tests/fixtures/individual_runs/: run_10_temp_0.7.json  run_10_temp_0.7.md  run_11_temp_0.7.json  run_11_temp_0.7.md  run_12_temp_0.7.json  run_12_temp_0.7.md  run_13_temp_0.7.json  run_13_temp_0.7.md  (+52 more)
(+56 files in other folders)
