[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyhegel"
version = "0.1.0"
description = "Simulator for identifying effective trunk narratives for swarm AI genesis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Post Fiat Team" }
]
dependencies = [
    "pydantic-ai>=0.0.10",
    "pydantic>=2.5.0",
    "spacy>=3.7.0",
    "networkx>=3.2",
    "sentence-transformers>=2.2.0",
    "hdbscan>=0.8.33",
    "scikit-learn-extra>=0.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "langsmith>=0.0.70",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "ddgs>=5.0.0",
    "a2a-sdk>=0.2.16",
    "git2md>=1.1.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[project.scripts]
polyhegel = "polyhegel.cli:main"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "a2a.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (may use multiple components)",
    "slow: marks tests as slow (>5 seconds)",
    "llm: marks tests that make real LLM API calls",
    "web: marks tests that make web requests",
    "git: marks tests that interact with git repositories",
]

[tool.pre-commit]
default_stages = ["commit"]

[[tool.pre-commit.repos]]
repo = "local"
hooks = [
    { id = "black", name = "black", entry = "python -m black", language = "system", types = ["python"], args = ["--check"] },
    { id = "ruff", name = "ruff", entry = "python -m ruff check", language = "system", types = ["python"] }
]